apps/doom/deployment.yaml
# Create a deployment for the Doom game server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doom-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doom-app
  template:
    metadata:
      labels:
        app: doom-app
    spec:
      containers:
      - name: doom
        imagePullPolicy: Always
        # image: callumhoughton22/doom-in-docker:0.1
        image: mattipaksula/http-doom
        ports:
        - containerPort: 8080
