apps/doom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doom-service
spec:
  type: ClusterIP
  selector:
    app: doom-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
