apps/doom/service.yml
apiVersion: v1
kind: Service
metadata:
  name: doom-in-docker-service
spec:
  type: LoadBalancer
  selector:
    app: doom-in-docker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
