apps/doom/ingress-doom.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doom-ingress
  namespace: default
  annotations:
spec:
  rules:
  - host: doom.idk8s.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: doom-service
            port:
              number: 6666
